IU-2020.3.3 <deski@DESKTOP-EIKUK3F Update ___liquibase.xml

--- a/templates/___liquibase.xml
+++ b/templates/___liquibase.xml
@@ -50,4 +50,9 @@
     </context>
   </template>
   <template name="liquibase rollback counted" value="liquibase rollbackCount 1" description="to roll back last item" toReformat="false" toShortenFQNames="true" />
+  <template name="liquibase label" value="--labels: v1.0" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="SQL" value="true" />
+    </context>
+  </template>
 </templateSet>
