--- a/templates/___now.xml
+++ b/templates/___now.xml
@@ -24,4 +24,9 @@
       <option name="SQL" value="true" />
     </context>
   </template>
+  <template name="now_open_api_scheman_description" value="@Schema(description = &quot;&quot;)" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
