--- a/templates/user.xml
+++ b/templates/user.xml
@@ -14,4 +14,10 @@
       <option name="SQL" value="true" />
     </context>
   </template>
+  <template name="a_string" value="java.lang.String str = &quot;aaa&quot;;" description="creates a string variable" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_EXPRESSION" value="true" />
+      <option name="JAVA_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
