--- a/templates/___ java.xml
+++ b/templates/___ java.xml
@@ -14,4 +14,14 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="java minus month" value="System.currentTimeMillis() - (30L * 24 * 60 * 60 * 1000))" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
+  <template name="java plus a day" value="new Date(System.currentTimeMillis() + (1L * 24 * 60 * 60 * 1000))" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
