--- a/templates/___ oracle.xml
+++ b/templates/___ oracle.xml
@@ -39,4 +39,9 @@
       <option name="SQL" value="true" />
     </context>
   </template>
+  <template name="oracle" value="select &#10;    from law_suit suit&#10;        inner join law_claim claim&#10;            on suit.SUIT_ID = claim.SUIT_ID" description="law_suit + law_claim" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="SQL" value="true" />
+    </context>
+  </template>
 </templateSet>
