--- a/templates/___ oracle.xml
+++ b/templates/___ oracle.xml
@@ -1,5 +1,5 @@
 <templateSet group="+++ oracle">
-  <template name="oracle to_date()" value="TO_DATE('2021-04-13 10:38:44', 'YYYY-MM-DD HH24:MI:SS')" description="to date function" toReformat="false" toShortenFQNames="true">
+  <template name="oracle to_date()" value="TO_DATE('2023-05-10', 'YYYY-MM-DD')" description="to date function" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="SQL" value="true" />
     </context>
@@ -24,7 +24,7 @@
       <option name="SQL" value="true" />
     </context>
   </template>
-  <template name="oracle to date function" value="TO_DATE('2020-06-03 10:48:27', 'YYYY-MM-DD HH24:MI:SS')" description="" toReformat="false" toShortenFQNames="true">
+  <template name="oracle to date with time" value="TO_DATE('2020-06-03 10:48:27', 'YYYY-MM-DD HH24:MI:SS')" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="SQL" value="true" />
     </context>
