IU-2023.1.3 <deski@DESKTOP-EIKUK3F Update SQL.xml, React.xml, PHP.xml, JavaScript.xml, user.xml, _@user_Night Owl _Material_.icls, AndroidXML.xml, AngularJS.xml, AsciiDoc.xml, HTML_XML.xml, Zen CSS.xml, Kotlin.xml, HTTP Request.xml, AndroidCommentsKotlin.xml, Java.xml, AndroidComments.xml, JSP.xml, PHP Interfaces.xml, Zen HTML.xml	Create Qute.xml, AngularJS 2.xml, gRPC Request.xml, Vue.xml

--- a/templates/AndroidCommentsKotlin.xml
+++ b/templates/AndroidCommentsKotlin.xml
@@ -14,4 +14,13 @@
     <variable name="todo" expression="" defaultValue="" alwaysStopAt="true" />
     <context />
   </template>
+  <template name="cfalse" value="`false`" description="puts false in a comment section" toReformat="false" toShortenFQNames="true">
+    <context />
+  </template>
+  <template name="ctrue" value="`true`" description="puts true in a comment section" toReformat="false" toShortenFQNames="true">
+    <context />
+  </template>
+  <template name="noop" value="/* no-op */" description="indicate that a method does not have any operations" toReformat="true" toShortenFQNames="true">
+    <context />
+  </template>
 </templateSet>
