--- a/templates/PHP Interfaces.xml
+++ b/templates/PHP Interfaces.xml
@@ -9,4 +9,9 @@
     <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
     <context />
   </template>
+  <template name="fun" value="function $NAME$($PARAMETERS$);" description="interface function" toReformat="true" toShortenFQNames="true">
+    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
+    <context />
+  </template>
 </templateSet>
