--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -66,4 +66,14 @@
     <variable name="CLASS_NAME" expression="phpClassName()" defaultValue="" alwaysStopAt="false" />
     <context />
   </template>
+  <template name="fun" value="function $NAME$($PARAMETERS$){&#10;    $END$&#10;}" description="function" toReformat="true" toShortenFQNames="true">
+    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
+    <context />
+  </template>
+  <template name="fori" value="for($INDEX$ = 0; $INDEX$ &lt; $LIMIT$; $INDEX$++) {&#10;  $END$&#10;}" description="Create iteration loop" toReformat="true" toShortenFQNames="true">
+    <variable name="INDEX" expression="phpSuggestVariableName()" defaultValue="&quot;$i&quot;" alwaysStopAt="true" />
+    <variable name="LIMIT" expression="" defaultValue="" alwaysStopAt="true" />
+    <context />
+  </template>
 </templateSet>
