--- a/templates/user.xml
+++ b/templates/user.xml
@@ -20,4 +20,11 @@
       <option name="JAVA_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="java_jaxb_context" value="jakarta.xml.bind.JAXBContext.newInstance(by.todes.elib.mets.Mets.class, by.todes.elib.mets.dc.SimpleLiteral.class)" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_ELSE_PLACE" value="true" />
+      <option name="JAVA_EXPRESSION" value="true" />
+      <option name="JAVA_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
