--- a/templates/user.xml
+++ b/templates/user.xml
@@ -27,4 +27,9 @@
       <option name="JAVA_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="java_schema" value="@io.swagger.v3.oas.annotations.media.Schema(description = &quot;&quot;)" description="" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_DECLARATION" value="true" />
+    </context>
+  </template>
 </templateSet>
