IU-2023.1.3 <deski@DESKTOP-EIKUK3F Update user.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -37,4 +37,44 @@
       <option name="JAVA_DECLARATION" value="true" />
     </context>
   </template>
+  <template name="java_genetate_ddl" value="jpa:&#10;    hibernate:&#10;      ddl-auto: update&#10;    generate-ddl: true&#10;    show-sql: true" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="ANY_OPENAPI_JSON_FILE" value="false" />
+      <option name="ANY_OPENAPI_YAML_FILE" value="false" />
+      <option name="AsciiDoc" value="false" />
+      <option name="CSS" value="false" />
+      <option name="CUCUMBER_FEATURE_FILE" value="false" />
+      <option name="ECMAScript6" value="false" />
+      <option name="GENERAL_JSON_FILE" value="false" />
+      <option name="GENERAL_YAML_FILE" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="HTML" value="false" />
+      <option name="HTTP_CLIENT_ENVIRONMENT" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="JAVA_SCRIPT" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JSP" value="false" />
+      <option name="KOTLIN" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="OTHER" value="true" />
+      <option name="PHP" value="false" />
+      <option name="PROTO" value="false" />
+      <option name="PROTOTEXT" value="false" />
+      <option name="Properties" value="false" />
+      <option name="QUTE" value="false" />
+      <option name="REQUEST" value="false" />
+      <option name="SHELL_SCRIPT" value="false" />
+      <option name="SQL" value="false" />
+      <option name="TypeScript" value="false" />
+      <option name="Vue" value="false" />
+      <option name="XML" value="false" />
+      <option name="XML_ATTRIBUTE" value="false" />
+    </context>
+  </template>
+  <template name="pom_orai18n" value="&lt;dependency&gt;&#10;                &lt;groupId&gt;com.oracle.ojdbc&lt;/groupId&gt;&#10;                &lt;artifactId&gt;orai18n&lt;/artifactId&gt;&#10;                &lt;version&gt;19.3.0.0&lt;/version&gt;&#10;            &lt;/dependency&gt;" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="MAVEN" value="true" />
+      <option name="XML_TEXT" value="true" />
+    </context>
+  </template>
 </templateSet>
