IU-2023.1.3 <deski@DESKTOP-EIKUK3F Update Java.xml

--- a/templates/Java.xml
+++ b/templates/Java.xml
@@ -2,4 +2,7 @@
   <template name="main" value="public static void main(String[] args){&#10;  $END$&#10;}" description="main() method declaration" toReformat="true" toShortenFQNames="true">
     <context />
   </template>
+  <template name="soutc" value="System.out::println" description="System.out::println" toReformat="true" toShortenFQNames="true">
+    <context />
+  </template>
 </templateSet>
