--- a/templates/___openApi.xml
+++ b/templates/___openApi.xml
@@ -9,7 +9,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="java_openapi_parameter" value="@io.swagger.v3.oas.annotations.Parameter(&#10;                    description = &quot;MARC ID&quot;,&#10;                    examples = {&#10;                            @io.swagger.v3.oas.annotations.media.ExampleObject(&#10;                                    name = &quot;example 1&quot;,&#10;                                    value = &quot;MARC-1234&quot;&#10;                            )&#10;                    }&#10;            )" toReformat="true" toShortenFQNames="true">
+  <template name="java_openapi_parameter" value="@io.swagger.v3.oas.annotations.Parameter(&#10;                    description = &quot;MARC ID&quot;,&#10;                    examples = {&#10;                            @io.swagger.v3.oas.annotations.media.ExampleObject(&#10;                                    name = &quot;example 1&quot;,&#10;                                    value = &quot;MARC-1234&quot;&#10;                            )&#10;                    }&#10;            )" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="JAVA_DECLARATION" value="true" />
     </context>
