--- a/templates/___react.xml
+++ b/templates/___react.xml
@@ -4,7 +4,7 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="react_imports" value="import React from &quot;react&quot;;&#10;import ReactDOM from &quot;react-dom&quot;" toReformat="true" toShortenFQNames="true">
+  <template name="react_imports" value="import React from &quot;react&quot;;&#10;import ReactDOM from &quot;react-dom&quot;" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="ES6_STATEMENT" value="true" />
       <option name="ES6_TOP_LEVEL_STATEMENT" value="true" />
@@ -13,7 +13,7 @@
       <option name="JS_TOP_LEVEL_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="react_create_root" value="const reactDOMRoot =&#10;    ReactDOM.createRoot(&#10;        document.getElementById(&quot;root&quot;)&#10;    );" toReformat="true" toShortenFQNames="true">
+  <template name="react_create_root" value="const reactDOMRoot =&#10;    ReactDOM.createRoot(&#10;        document.getElementById(&quot;root&quot;)&#10;    );" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="ES6_STATEMENT" value="true" />
       <option name="ES6_TOP_LEVEL_STATEMENT" value="true" />
@@ -22,14 +22,14 @@
       <option name="JS_TOP_LEVEL_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="react_jsx_return_statement" value="return (&#10;      &lt;h1&gt;Hey yo!&lt;/h1&gt;  &#10;    );" toReformat="true" toShortenFQNames="true">
+  <template name="react_jsx_return_statement" value="return (&#10;      &lt;h1&gt;Hey yo!&lt;/h1&gt;  &#10;    );" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="ES6_STATEMENT" value="true" />
       <option name="JS_CLASS_MEMBER_STATEMENT" value="false" />
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="react_axios_get_request" value="axios.get(&#10;        'http://localhost:8080/portal/books',&#10;        {&#10;            headers: {&#10;&#10;            },&#10;            params: {&#10;&#10;            }&#10;        }&#10;    )" toReformat="true" toShortenFQNames="true">
+  <template name="react_axios_get_request" value="axios.get(&#10;        'http://localhost:8080/portal/books',&#10;        {&#10;            headers: {&#10;&#10;            },&#10;            params: {&#10;&#10;            }&#10;        }&#10;    )" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="ES6_EXPRESSION" value="true" />
       <option name="JSX_HTML" value="true" />
