--- a/templates/___openApi.xml
+++ b/templates/___openApi.xml
@@ -14,4 +14,9 @@
       <option name="JAVA_DECLARATION" value="true" />
     </context>
   </template>
+  <template name="java_openapi_request_body_with_example" value="@io.swagger.v3.oas.annotations.parameters.RequestBody(&#10;                    description = &quot;Данные с формы&quot;,&#10;                    content = @io.swagger.v3.oas.annotations.media.Content(&#10;                            examples = {&#10;                                    @io.swagger.v3.oas.annotations.media.ExampleObject(&#10;                                            name = &quot;Example 1&quot;,&#10;                                            description = &quot;Пример метса для сохранения. Что бы потестить ...&quot;,&#10;                                            value = &quot;&quot;&quot;&#10;                                            &#10;                                            &quot;&quot;&quot;&#10;&#10;                                    )&#10;                            },&#10;                            schema = @io.swagger.v3.oas.annotations.media.Schema(&#10;                                    implementation = by.todes.elib.mets.service.pojos.ElibMetsDTO.class&#10;                            )&#10;                    )&#10;            )" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_DECLARATION" value="true" />
+    </context>
+  </template>
 </templateSet>
