--- a/templates/___openApi.xml
+++ b/templates/___openApi.xml
@@ -19,4 +19,9 @@
       <option name="JAVA_DECLARATION" value="true" />
     </context>
   </template>
+  <template name="java_openapi_api_definition" value="@io.swagger.v3.oas.annotations.OpenAPIDefinition(&#10;        info = @io.swagger.v3.oas.annotations.info.Info(&#10;                version = &quot;0.1&quot;,&#10;                title = &quot;Portal service.&quot;&#10;        ),&#10;        tags = {&#10;                @io.swagger.v3.oas.annotations.tags.Tag(&#10;                        name = &quot;PORTAL&quot;&#10;                )&#10;        }&#10;)" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_DECLARATION" value="true" />
+    </context>
+  </template>
 </templateSet>
