IU-2023.1.5 <deski@DESKTOP-EIKUK3F Update ___ java.xml, find.xml, ui.lnf.xml, ide.general.xml, _@user_Night Owl _Material_.icls, editor.xml

--- a/templates/___ java.xml
+++ b/templates/___ java.xml
@@ -24,7 +24,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="java_ehcache_config_root_element" value="&lt;config xmlns='http://www.ehcache.org/v3'&#10;        xmlns:xsi=&quot;http://www.w3.org/2001/XMLSchema-instance&quot;&#10;        xsi:schemaLocation=&quot;http://www.ehcache.org/v3 http://www.ehcache.org/schema/ehcache-core-3.10.xsd&quot;&gt;" toReformat="true" toShortenFQNames="true">
+  <template name="java_ehcache_config_root_element" value="&lt;config xmlns='http://www.ehcache.org/v3'&#10;        xmlns:xsi=&quot;http://www.w3.org/2001/XMLSchema-instance&quot;&#10;        xsi:schemaLocation=&quot;http://www.ehcache.org/v3 http://www.ehcache.org/schema/ehcache-core-3.10.xsd&quot;&gt;" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="XML_TEXT" value="true" />
     </context>
