--- a/templates/___ java.xml
+++ b/templates/___ java.xml
@@ -29,7 +29,7 @@
       <option name="XML_TEXT" value="true" />
     </context>
   </template>
-  <template name="java_json_jackson_json_date_format" value="@com.fasterxml.jackson.annotation.JsonFormat(pattern=&quot;yyyy-MM-dd HH:mm:ss&quot;)" toReformat="true" toShortenFQNames="true">
+  <template name="java_json_jackson_json_date_format" value="@com.fasterxml.jackson.annotation.JsonFormat(pattern=&quot;yyyy-MM-dd HH:mm:ss&quot;)" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="COMPLETION" value="false" />
       <option name="JAVA_CODE" value="true" />
@@ -42,12 +42,12 @@
       <option name="JAVA_STRING" value="false" />
     </context>
   </template>
-  <template name="java_local_date_time_to_date" value="java.util.Date.from(date.atZone(java.time.ZoneId.systemDefault()).toInstant())" toReformat="true" toShortenFQNames="true">
+  <template name="java_local_date_time_to_date" value="java.util.Date.from(date.atZone(java.time.ZoneId.systemDefault()).toInstant())" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="JAVA_EXPRESSION" value="true" />
     </context>
   </template>
-  <template name="java_date_to_locatl_date_time" value="date.toInstant()&#10;                                                    .atZone(java.time.ZoneId.systemDefault())&#10;                                                    .toLocalDateTime()" toReformat="true" toShortenFQNames="true">
+  <template name="java_date_to_locatl_date_time" value="date.toInstant()&#10;                                                    .atZone(java.time.ZoneId.systemDefault())&#10;                                                    .toLocalDateTime()" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="JAVA_EXPRESSION" value="true" />
       <option name="JAVA_STATEMENT" value="true" />
