IU-2023.1.5 <deski@DESKTOP-EIKUK3F Update ___ java.xml

--- a/templates/___ java.xml
+++ b/templates/___ java.xml
@@ -90,4 +90,9 @@
       <option name="XML_ATTRIBUTE" value="false" />
     </context>
   </template>
+  <template name="java_kl_uni_mapping" value="@jakarta.persistence.JoinColumns({&#10;            @jakarta.persistence.JoinColumn(name = &quot;T_STATUS&quot;, referencedColumnName = &quot;TYPE&quot;),&#10;            @jakarta.persistence.JoinColumn(name = &quot;C_STATUS&quot;, referencedColumnName = &quot;CODE&quot;)})&#10;    @jakarta.persistence.ManyToOne" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_DECLARATION" value="true" />
+    </context>
+  </template>
 </templateSet>
