--- a/templates/user.xml
+++ b/templates/user.xml
@@ -183,4 +183,9 @@
       <option name="JSON_STRING_VALUES" value="false" />
     </context>
   </template>
+  <template name="java_doc_true" value="{@code true}" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
